DASH-924 Fix metamask landing page info items gap.

--- a/client/src/pages/MetamaskLandingPage/MetamaskLangingPage.module.scss
+++ b/client/src/pages/MetamaskLandingPage/MetamaskLangingPage.module.scss
@@ -357,12 +357,7 @@
       padding: 100px 80px;
 
       .featureItemsContainer {
-        justify-content: space-between;
         gap: 80px;
-
-        .featureItemContainer {
-          flex-basis: 45%;
-        }
       }
     }
 
